# kingdom

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: docs.yml  release.yml
docs/: building.md  controls.md  credits.md  gameplay.md  getting-started.md  index.md  saves.md  units.md  world.md
docs/overrides/partials/: comments.html
src/: app.rs  atlas.rs  camera.rs  game.rs  gfx.rs  main.rs  pathfind.rs  save.rs  shader.wgsl  ui.rs  world.rs
